// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`expressions > "hello world" 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  hello world
-1  3  POP
-1  4  NIL
-1  5  RETURN"
`;

exports[`expressions > (1) 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  1
-1  3  POP
-1  4  NIL
-1  5  RETURN"
`;

exports[`expressions > -1 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  1
-1  3  NEG
-1  4  POP
-1  5  NIL
-1  6  RETURN"
`;

exports[`expressions > 1 + 1 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  1
-1  3  CONSTANT  1
-1  5  ADD
-1  6  POP
-1  7  NIL
-1  8  RETURN"
`;

exports[`expressions > 1 : 1 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  1
-1  3  POP
-1  4  CONSTANT  1
-1  6  POP
-1  7  NIL
-1  8  RETURN"
`;

exports[`expressions > 123.456 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  123.456
-1  3  POP
-1  4  NIL
-1  5  RETURN"
`;

exports[`expressions > 255 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  255
-1  3  POP
-1  4  NIL
-1  5  RETURN"
`;

exports[`expressions > false 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  false
-1  3  POP
-1  4  NIL
-1  5  RETURN"
`;

exports[`expressions > nil 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  NIL
-1  2  POP
-1  3  NIL
-1  4  RETURN"
`;

exports[`expressions > true 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  true
-1  3  POP
-1  4  NIL
-1  5  RETURN"
`;

exports[`malformed lines 1`] = `
"=== Disassembly of <unknown>: ===
undefined  1  CONSTANT  hello world
undefined  3  POP
undefined  4  NIL
undefined  5  RETURN"
`;

exports[`missing constants 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  undefined
-1  3  POP
-1  4  NIL
-1  5  RETURN"
`;

exports[`print > i% = 1 1`] = `
"=== Disassembly of <unknown>: ===
100  1  CONSTANT    i%
100  3  CONSTANT    1
100  5  SET_GLOBAL  i%
100  7  NIL
100  8  RETURN"
`;

exports[`print > if true then print "true" else print "false" endif 1`] = `
"=== Disassembly of <unknown>: ===
100  1   CONSTANT       true
100  3   JUMP_IF_FALSE  3 -> 13
100  6   POP
100  7   CONSTANT       true
100  9   PRINT
100  10  JUMP           10 -> 17
100  13  POP
100  14  CONSTANT       false
100  16  PRINT
100  17  NIL
100  18  RETURN"
`;

exports[`print > let i% = 1 1`] = `
"=== Disassembly of <unknown>: ===
100  1  CONSTANT       i%
100  3  CONSTANT       1
100  5  DEFINE_GLOBAL  i%
100  7  NIL
100  8  RETURN"
`;

exports[`print > print "hello world" 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  hello world
-1  3  PRINT
-1  4  NIL
-1  5  RETURN"
`;

exports[`print > print (1) 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  1
-1  3  PRINT
-1  4  NIL
-1  5  RETURN"
`;

exports[`print > print 1 + 1 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  1
-1  3  CONSTANT  1
-1  5  ADD
-1  6  PRINT
-1  7  NIL
-1  8  RETURN"
`;

exports[`print > print 123.456 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  123.456
-1  3  PRINT
-1  4  NIL
-1  5  RETURN"
`;

exports[`print > print 255 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  255
-1  3  PRINT
-1  4  NIL
-1  5  RETURN"
`;

exports[`print > print false 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  false
-1  3  PRINT
-1  4  NIL
-1  5  RETURN"
`;

exports[`print > print i% + 1 1`] = `
"=== Disassembly of <unknown>: ===
100  1  CONSTANT    i%
100  3  GET_GLOBAL  i%
100  5  CONSTANT    1
100  7  ADD"
`;

exports[`print > print nil 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  NIL
-1  2  PRINT
-1  3  NIL
-1  4  RETURN"
`;

exports[`print > print true 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  CONSTANT  true
-1  3  PRINT
-1  4  NIL
-1  5  RETURN"
`;

exports[`simple program 1`] = `
"=== Disassembly of <unknown>: ===
100  1  CONSTANT  hello world
100  3  PRINT
200  4  CONSTANT  goodbye
200  6  PRINT
200  7  NIL
200  8  RETURN"
`;

exports[`unknown opcode 1`] = `
"=== Disassembly of <unknown>: ===
-1  1  Unknown opcode  0x2329"
`;
